[package]
name = "stock_market_bot"
version = "0.1.0"
authors=["Jon Karrer <karrerjon@gmail.com>"]
edition="2021"

[lib]
name="river"
path="src/lib.rs"

[[bin]]
name="bot"
path="src/main.rs"

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
ureq = { version = "*", features = ["json"] }
